--- a/SP4 GDT Team 10/AI/AI.vcxproj
+++ b/SP4 GDT Team 10/AI/AI.vcxproj
@@ -168,6 +168,7 @@
     <ClCompile Include="Source\CalamityBase.cpp" />
     <ClCompile Include="Source\CalamityEarthquake.cpp" />
     <ClCompile Include="Source\CalamityManager.cpp" />
+    <ClCompile Include="Source\CalamityTornado.cpp" />
     <ClCompile Include="Source\CalamityTsunami.cpp" />
     <ClCompile Include="Source\Camera.cpp" />
     <ClCompile Include="Source\ChiefHut.cpp" />
@@ -211,6 +212,7 @@
     <ClCompile Include="Source\StateMachine.cpp" />
     <ClCompile Include="Source\StatePig.cpp" />
     <ClCompile Include="Source\StateVillager.cpp" />
+    <ClCompile Include="Source\Tornado.cpp" />
     <ClCompile Include="Source\Tree.cpp" />
     <ClCompile Include="Source\Tsunami.cpp" />
     <ClCompile Include="Source\UIAltarPopup.cpp" />
@@ -245,6 +247,7 @@
     <ClInclude Include="Source\CalamityBase.h" />
     <ClInclude Include="Source\CalamityEarthquake.h" />
     <ClInclude Include="Source\CalamityManager.h" />
+    <ClInclude Include="Source\CalamityTornado.h" />
     <ClInclude Include="Source\CalamityTsunami.h" />
     <ClInclude Include="Source\Camera.h" />
     <ClInclude Include="Source\ChiefHut.h" />
@@ -295,6 +298,7 @@
     <ClInclude Include="Source\StateMachine.h" />
     <ClInclude Include="Source\StatePig.h" />
     <ClInclude Include="Source\StateVillager.h" />
+    <ClInclude Include="Source\Tornado.h" />
     <ClInclude Include="Source\Tree.h" />
     <ClInclude Include="Source\Tsunami.h" />
     <ClInclude Include="Source\UIAltarPopup.h" />
