starting out blizzard calamity (press 9 to manually spawn)

--- a/SP4 GDT Team 10/AI/AI.vcxproj.filters
+++ b/SP4 GDT Team 10/AI/AI.vcxproj.filters
@@ -317,6 +317,9 @@
     <ClCompile Include="Source\EffectRing.cpp">
       <Filter>VisualEffects\EffectObjects</Filter>
     </ClCompile>
+    <ClCompile Include="Source\CalamityBlizzard.cpp">
+      <Filter>Calamities\CalamityObjects</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Application.h">
@@ -585,6 +588,9 @@
     </ClInclude>
     <ClInclude Include="Source\EffectRing.h">
       <Filter>VisualEffects\EffectObjects</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\CalamityBlizzard.h">
+      <Filter>Calamities\CalamityObjects</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
