--- a/SP4 GDT Team 10/AI/AI.vcxproj
+++ b/SP4 GDT Team 10/AI/AI.vcxproj
@@ -219,6 +219,7 @@
     <ClCompile Include="Source\StateMachine.cpp" />
     <ClCompile Include="Source\StatePig.cpp" />
     <ClCompile Include="Source\StateVillager.cpp" />
+    <ClCompile Include="Source\StoneShed.cpp" />
     <ClCompile Include="Source\Tornado.cpp" />
     <ClCompile Include="Source\Tree.cpp" />
     <ClCompile Include="Source\Tsunami.cpp" />
@@ -313,6 +314,7 @@
     <ClInclude Include="Source\StateMachine.h" />
     <ClInclude Include="Source\StatePig.h" />
     <ClInclude Include="Source\StateVillager.h" />
+    <ClInclude Include="Source\StoneShed.h" />
     <ClInclude Include="Source\Tornado.h" />
     <ClInclude Include="Source\Tree.h" />
     <ClInclude Include="Source\Tsunami.h" />
